<resources>
    <string name="app_name">Medical</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">The request has been canceled</string>
    <string name="back">Back to home</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="login_now">To Continue , Login Now</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="doctor"><font fgcolor="#22C7B8">Doctor</font></string>
    <string name="nurse"><font fgcolor="#22C7B8">Nurse</font></string>
    <string name="analysis_employee"><font fgcolor="#22C7B8">Analysis Employee</font></string>
    <string name="receptionist"><font fgcolor="#22C7B8">Receptionist</font></string>
    <string name="manager"><font fgcolor="#22C7B8">Manager</font></string>
    <string name="hr"><font fgcolor="#22C7B8">HR</font></string>
    <string name="prototype_map"><font fgcolor="#22C7B8">Prototype Map</font></string>
    <string name="forget_password"><u>Forget Password ?</u></string>
    <string name="select_doctor">Select Doctor</string>
    <string name="create_call">Create Call</string>
    <string name="patient_name">Patient Name</string>
    <string name="age">Age</string>
    <string name="case_description">Case Description</string>
    <string name="case_details">Case Details</string>
    <string name="new_user">New User</string>
    <string name="create_user">Create User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Case">Case</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="status">Status</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="specialist">Specialist</string>
    <string name="logout">Logout</string>
    <string name="select_analysis_employee">Select Analysis employee</string>
    <string name="search_for_doctor">Search For Doctor</string>
    <string name="calls"><font fgcolor="#FFFFFF">Calls</font></string>
    <string name="finished"><font fgcolor="#06e173">Finished</font></string>
    <string name="tasks"><font fgcolor="#FFFFFF">Tasks</font></string>
    <string name="tasks_black">Tasks</string>
    <string name="reports"><font fgcolor="#FFFFFF">Reports</font></string>
    <string name="black_reports">Reports</string>
    <string name="cases"><font fgcolor="#FFFFFF">Cases</font></string>
    <string name="cases_black">Cases</string>
    <string name="attendance_registered"><font fgcolor="#FFFFFF">Your attendance has been registered</font></string>
    <string name="touch_id"><font fgcolor="#FFFFFF">Please touch ID sensor to verify registration</font></string>
    <string name="attendance"><font fgcolor="#FFFFFF">attendance - leaving</font></string>
    <string name="search_for_analysis_employee">Search for Analysis employee</string>
    <string name="employee">Employee</string>
    <string name="add_medical_record">Add medical record</string>
    <string name="sgot_sgpt">SGOT,SGPT</string>
    <string name="esr">ESR</string>
    <string name="lipid_profile">Lipid profile</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_record">Add record</string>
    <string name="medical_record">Medical Record</string>
    <string name="you_have_request">You have request</string>
    <string name="you_have_new_request">You have a new request from the doctor, please  follow up and implement the request as soon as  possible</string>
    <string name="show_details">Show Details</string>
    <string name="requests">Requests</string>
    <string name="accept">Accept</string>
    <string name="medical_measurement">Medical measurement</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="sugar_analysis">Sugar analysis</string>
    <string name="add_measurement">Add measurement</string>
    <string name="Caseadd_note">Add Note</string>
    <string name="send">send</string>
    <string name="call">Call</string>
    <string name="calls_black">Calls</string>
    <string name="busy">Busy</string>
    <string name="_case">Case</string>
    <string name="my_profile">My Profile</string>
    <string name="end_case">End Case</string>
    <string name="add_nurse">Add Nurse</string>
    <string name="request">Request</string>
    <string name="select_nurse">Select Nurse</string>
    <string name="search_for_nurse">Search For Nurse</string>
    <string name="tasks_details">Tasks Details</string>
    <string name="description">Description</string>
    <string name="to_do">To do</string>
    <string name="add">Add</string>
    <string name="create_report">Create Report</string>
    <string name="report_name">Report Name</string>
    <string name="select_employee">Select Employee</string>
    <string name="task_name">Task Name</string>
    <string name="send_call">Send Call</string>

</resources>