<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RequestMedicalMeasurement.MedicalRecordFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:src="@drawable/iv_exit"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/_6sdp"
            android:text="@string/medical_measurement"
            android:textColor="@color/select_doctor_color"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:weightSum="12"
        >
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sgot_sgpt"
            android:backgroundTint="@color/main"
            android:padding="@dimen/_13sdp"
            app:cornerRadius="@dimen/_5sdp"
            android:textAllCaps="false"
            android:layout_weight="2"
            android:drawableEnd="@drawable/iv_white_exit"
            android:textSize="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:inputType="textMultiLine"
            android:layout_marginStart="@dimen/_5sdp"
            android:scrollbarAlwaysDrawVerticalTrack="true"

            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esr"
            android:backgroundTint="@color/main"
            android:padding="@dimen/_13sdp"
            app:cornerRadius="@dimen/_5sdp"
            android:textAllCaps="false"
             android:layout_weight="1"
            android:drawableEnd="@drawable/iv_white_exit"
            android:textSize="@dimen/_11sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:inputType="textMultiLine"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_marginStart="@dimen/_5sdp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lipid_profile"
            android:backgroundTint="@color/main"
            android:layout_weight="2"
            android:layout_marginStart="@dimen/_5sdp"
            app:cornerRadius="@dimen/_5sdp"
            android:textAllCaps="false"
            android:padding="@dimen/_13sdp"
            android:drawableEnd="@drawable/iv_white_exit"
            android:textSize="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/add_measurement"
        android:paddingStart="@dimen/_6sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textSize="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:cornerRadius="@dimen/_8sdp"
        app:strokeColor="@color/gray"
        android:drawableRight="@drawable/iv_gray_add"
        android:drawablePadding="@dimen/_5sdp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_note"
        android:hint="@string/Caseadd_note"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_60sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/_14sdp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/main"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/send"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_7sdp"
            app:iconGravity="textEnd"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>