<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intro.StartUpFragment">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prototype_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/_140sdp"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="@dimen/_15ssp"
        />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/iv_rectangle3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/iv_rectangle2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".intro.StartUpFragment">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/doctor"
                android:paddingStart="@dimen/_6sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_6sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"

                app:cornerRadius="@dimen/_8sdp"
                app:strokeColor="@color/gray" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/receptionist"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                app:cornerRadius="@dimen/_8sdp"
                app:strokeColor="@color/gray" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/nurse"
                android:paddingStart="@dimen/_6sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_6sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                app:cornerRadius="@dimen/_8sdp"
                app:strokeColor="@color/gray" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_110sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/analysis_employee"
                android:paddingStart="@dimen/_4sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_4sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                app:cornerRadius="@dimen/_8sdp"
                app:strokeColor="@color/gray" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/manager"
                android:paddingStart="@dimen/_1sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_1sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                app:cornerRadius="@dimen/_8sdp"
                app:strokeColor="@color/gray" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="@dimen/_43sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/hr"
                android:paddingTop="@dimen/_10sdp"

                android:paddingBottom="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"

                app:cornerRadius="@dimen/_8sdp"
                app:strokeColor="@color/gray" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>